# virtual-smart-motion-cell

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  DEVELOPMENT.md  Directory.Build.props  Directory.Packages.props  GOVERNANCE.md  MAINTAINERS.md  Makefile  NOTICE  PLATFORM_SUPPORT.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  VirtualSmartMotionCell.sln  compose.yaml  resolved-compose.yml  start-complete.ps1  start-complete.sh  virtual-smart-motion-cell-api-raw-string-fix.patch  virtual-smart-motion-cell-dotnet-build-fix.patch
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md
config/: runtime.json
datasets/: README.md
docker/: Dockerfile  Dockerfile.mes  Dockerfile.research
docs/: README.md  adapter-development.md  api.md  architecture.md  compatibility-policy.md  contributor-quickstart.md  cross-platform-release.md  current-limitations.md  design-proposals.md  good-first-issues.md  localization.md  manufacturing-data.md  mes-simulator.md  observability.md  (+12 more)
reference/python-simulator/: README.md  pyproject.toml
reference/python-simulator/configs/: demo-cell.json  slow-safe-demo.json
reference/python-simulator/src/smart_motion_cell/: __init__.py  __main__.py  api.py  cli.py  config.py
reference/python-simulator/src/smart_motion_cell/cell/: __init__.py  interlocks.py  state_machine.py
reference/python-simulator/src/smart_motion_cell/control/: __init__.py  pid.py
reference/python-simulator/src/smart_motion_cell/manufacturing/: __init__.py  oee.py  telemetry.py
reference/python-simulator/src/smart_motion_cell/motion/: __init__.py  axis.py  drive.py  plant.py  profile.py
reference/python-simulator/src/smart_motion_cell/reporting/: __init__.py  report.py
reference/python-simulator/src/smart_motion_cell/resources/: __init__.py
reference/python-simulator/src/smart_motion_cell/simulation/: __init__.py  runner.py  scenarios.py
reference/python-simulator/src/smart_motion_cell/web/: __init__.py  index.html
reference/python-simulator/tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_control.py  test_machine.py  test_manufacturing.py  test_motion.py  test_report.py  test_simulation.py
research/: README.md  pyproject.toml
research/studio/: app.js
research/tests/: test_api.py  test_dynamic_environment.py  test_ethercat_protocol.py  test_experiment_bundle.py  test_manifest.py  test_network_semantics.py  test_replay.py
research/vsmc_research/: __init__.py  api.py  cli.py  dataset.py  environment.py  ethercat.py  faults.py  manifest.py  models.py  network.py  recorder.py  replay.py  runner.py
research/vsmc_research/studio/: index.html  styles.css
(+152 files in other folders)
