[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vsmc-research-bench"
version = "0.5.0"
description = "Dynamic machine-fault-first CPS research benchmark for Virtual Smart Motion Cell"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Virtual Smart Motion Cell contributors" }]
dependencies = [
  "fastapi>=0.110",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=15",
  "PyYAML>=6",
  "uvicorn>=0.29"
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8", "ruff>=0.5"]

[project.scripts]
vsmc-bench = "vsmc_research.cli:main"
vsmc-studio = "vsmc_research.api:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["vsmc_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100

[tool.setuptools.package-data]
vsmc_research = ["studio/*", "templates/*.yaml"]
